--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body {
     margin: 0;
-    overflow: hidden;
+    overflow: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     flex-direction: column;
@@ -151,7 +151,6 @@ h7 {
     height: 100vh; /* Full viewport height */
     align-items: stretch; /* Makes all child elements equal height */
     margin-bottom: 20px;
-    overflow-y: auto;
 }
 
 /* Video Container */
@@ -200,7 +199,6 @@ h7 {
     padding: 0;
     margin: 0;
     flex-grow: 1;
-    overflow-y: auto;
     display: flex;
 }
 
