--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h4 {
     text-align: left;
     margin-top: 15px;
     margin-bottom: 20px;
-    width: 80%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     
@@ -170,7 +170,7 @@ h7 {
 #videoPlayer {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the video covers the container fully, maintaining aspect ratio */
+    object-fit: contain; /* Ensures the video covers the container fully, maintaining aspect ratio */
     border-radius: 8px; /* Optional: Add rounded corners to the video */
 }
 
